frequency, voltage adjustments, gpu oc, add settings specific to me

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.3
-# Thu Nov 17 17:28:20 2011
+# Fri Nov 18 02:19:29 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -241,6 +241,7 @@ CONFIG_FREEZER=y
 #
 # System Type
 #
+CONFIG_DAG=y
 CONFIG_MMU=y
 # CONFIG_ARCH_AAEC2000 is not set
 # CONFIG_ARCH_INTEGRATOR is not set
