--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.3
-# Thu Nov 17 17:28:20 2011
+# Fri Nov 18 02:26:13 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -701,6 +701,7 @@ CONFIG_ALIGNMENT_TRAP=y
 CONFIG_ARCH_INLINE_READ_LOCK_BH=y
 CONFIG_SCSI_MOD=y
 CONFIG_KSAPI=m
+CONFIG_DAG=y
 CONFIG_OPROFILE=m
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_SERIAL_CORE=y
