--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.3
-# Fri Nov 18 02:26:13 2011
+# Fri Nov 18 14:17:23 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -11,7 +11,6 @@ CONFIG_MSM_VIDC_VENC=y
 CONFIG_RMNET_SDIO_DATA_CHANNEL=8
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_INPUT_KEYBOARD=y
-CONFIG_KPROBE_EVENT=y
 CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_CRC32=y
 CONFIG_ARCH_INLINE_READ_LOCK_IRQ=y
@@ -92,7 +91,6 @@ CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_TUN=y
 CONFIG_USB_OTG_UTILS=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
-CONFIG_DEFAULT_BFQ=y
 CONFIG_ARCH_INLINE_SPIN_LOCK_IRQ=y
 CONFIG_DM_CRYPT=y
 CONFIG_REED_SOLOMON_ENC8=y
@@ -100,7 +98,6 @@ CONFIG_HAVE_PROC_CPU=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_VIDEO_IR_I2C=y
 CONFIG_MSM_XO=y
-CONFIG_RD_LZMA=y
 CONFIG_USB=y
 CONFIG_SWITCH_GPIO=y
 CONFIG_CRYPTO_HMAC=y
@@ -119,7 +116,6 @@ CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_USB_OTG_WHITELIST=y
 CONFIG_TIMERFD=y
 CONFIG_INLINE_READ_TRYLOCK=y
-CONFIG_TRACEPOINTS=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_NET_EMATCH_STACK=32
 CONFIG_BOUNCE=y
@@ -128,7 +124,6 @@ CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_SHMEM=y
 CONFIG_MACH_MSM8X60_QT=y
 CONFIG_RMNET_SMD_DATA_CHANNEL="DATA40"
-CONFIG_DECOMPRESS_LZMA=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_DNOTIFY=y
 CONFIG_ASK_IP_FIB_HASH=y
@@ -206,7 +201,6 @@ CONFIG_INLINE_READ_LOCK_BH=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_BUG=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_PMIC8058_PWRKEY=y
 CONFIG_MMC_MSM_SDC2_8_BIT_SUPPORT=y
 CONFIG_NET_EMATCH_META=y
@@ -244,7 +238,6 @@ CONFIG_USB_STORAGE_ALAUDA=y
 CONFIG_DIAG_OVER_USB=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_EVENT_TRACING=y
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
@@ -274,7 +267,6 @@ CONFIG_VIDEO_IR=y
 CONFIG_MACH_MSM8X60_QRDC=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_PROC_PAGE_MONITOR=y
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_ARCH_INLINE_WRITE_UNLOCK=y
 CONFIG_NF_NAT_PROTO_DCCP=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
@@ -310,7 +302,6 @@ CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MACH_MSM8X60_FFA=y
 CONFIG_INET6_XFRM_MODE_TUNNEL=y
 CONFIG_MEDIA_SUPPORT=y
-CONFIG_DEBUG_BUGVERBOSE=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_EXT3_FS=y
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
@@ -342,6 +333,7 @@ CONFIG_KEYBOARD_PMIC8058=y
 CONFIG_USB_CSW_HACK=y
 CONFIG_FB_MSM=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
+CONFIG_BLK_CGROUP=y
 CONFIG_CRYPTO_RNG=m
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_SND_USB=y
@@ -445,7 +437,6 @@ CONFIG_MD=y
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_MEDIA_TUNER=y
 CONFIG_MISC_DEVICES=y
-CONFIG_RD_BZIP2=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_MEDIA_TUNER_SIMPLE=y
 CONFIG_KEYBOARD_ATKBD=y
@@ -467,6 +458,7 @@ CONFIG_TSIF_CHRDEV=m
 CONFIG_GENERIC_TIME=y
 CONFIG_SND_HWDEP=y
 CONFIG_BLK_DEV_LOOP=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_WAKELOCK=y
 CONFIG_NF_NAT_IRC=y
 CONFIG_MEDIA_TUNER_XC2028=y
@@ -480,7 +472,6 @@ CONFIG_MSM_PIL=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
-CONFIG_KPROBES=y
 CONFIG_FS_MBCACHE=y
 CONFIG_RTC_CLASS=y
 CONFIG_VP_A2220=y
@@ -512,6 +503,7 @@ CONFIG_RELAY=y
 CONFIG_CRYPTO_ECB=y
 CONFIG_NF_CONNTRACK_AMANDA=y
 CONFIG_DEBUG_FS=y
+CONFIG_ARM_THUMBEE=y
 CONFIG_BASE_FULL=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_ZLIB_DEFLATE=y
@@ -520,14 +512,12 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_FW_LOADER=y
 CONFIG_SND_SOC_MSM8X60=y
-CONFIG_KALLSYMS=y
 CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_MII=y
 CONFIG_SIGNALFD=y
 CONFIG_MOUSE_PS2_ALPS=y
 CONFIG_EXT4_FS=y
-CONFIG_KRETPROBES=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 CONFIG_LIBRA_SDIOIF=m
@@ -535,7 +525,6 @@ CONFIG_IPV6_PRIVACY=y
 CONFIG_LOCKD_V4=y
 CONFIG_DUMMY=y
 CONFIG_USB_GADGET_DUALSPEED=y
-CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_HAS_IOMEM=y
 CONFIG_RING_BUFFER_ALLOW_SWAP=y
 CONFIG_SND_RAWMIDI=y
@@ -543,6 +532,7 @@ CONFIG_PPPOPNS=y
 CONFIG_CHARGER_SMB328A=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_GENERIC_IRQ_PROBE=y
+CONFIG_MSM_STANDALONE_POWER_COLLAPSE=y
 CONFIG_USB_STORAGE_SDDR09=y
 CONFIG_ARCH_INLINE_READ_UNLOCK_IRQ=y
 CONFIG_IP_NF_MATCH_TTL=y
@@ -571,7 +561,6 @@ CONFIG_PACKET=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NFS_V3=y
-CONFIG_NOP_TRACER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_INET=y
 CONFIG_USB_ANDROID_ACM_SMD=y
@@ -665,7 +654,6 @@ CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_USB_SEC_WHITELIST=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_MSM_WATCHDOG=y
-CONFIG_KALLSYMS_ALL=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_LIBCRC32C=y
 CONFIG_KEYBOARD_MATRIX=y
@@ -737,7 +725,6 @@ CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_SENSOR_M5MO=y
 CONFIG_BT_HID=m
-CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
 CONFIG_NF_NAT_H323=y
 CONFIG_INLINE_READ_UNLOCK_IRQ=y
@@ -798,7 +785,7 @@ CONFIG_INLINE_SPIN_UNLOCK_IRQ=y
 CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
 CONFIG_INLINE_READ_LOCK=y
 CONFIG_MSM_SMD_DEBUG=y
-CONFIG_DEFAULT_IOSCHED="bfq"
+CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_IPV6_MIP6=y
 CONFIG_NLATTR=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -822,7 +809,6 @@ CONFIG_RTC_PM8058=y
 CONFIG_MMC_MSM_SDC4_SUPPORT=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_FB=y
-CONFIG_TRACING=y
 CONFIG_I2C_COMPAT=y
 CONFIG_CPU_32v7=y
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
@@ -871,6 +857,7 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_HW_RANDOM=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_KEYPAD_CYPRESS_TOUCH=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_BASE_SMALL=0
@@ -961,7 +948,6 @@ CONFIG_USB_ANDROID_RMNET_SMD_SDIO=y
 CONFIG_PREEMPT=y
 CONFIG_FB_CFB_COPYAREA=y
 CONFIG_TZCOM=y
-CONFIG_BINARY_PRINTF=y
 CONFIG_USB_STORAGE_JUMPSHOT=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
@@ -1010,6 +996,7 @@ CONFIG_NF_CONNTRACK=y
 CONFIG_LCD_CLASS_DEVICE=m
 CONFIG_FILE_LOCKING=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_AIO=y
 CONFIG_ARCH_INLINE_READ_UNLOCK_BH=y
 CONFIG_MSM_RMNET_SDIO=y
@@ -1033,7 +1020,6 @@ CONFIG_NF_CT_PROTO_GRE=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_CRYPTO_AEAD2=y
-CONFIG_DEBUG_INFO=y
 CONFIG_MOUSE_PS2=y
 CONFIG_NETFILTER_XT_MATCH_HL=y
 CONFIG_CRYPTO_ALGAPI2=y
