--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -44,7 +44,6 @@ CONFIG_BATTERY_MAX17040=Y
 CONFIG_SND_SOC=Y
 CONFIG_MEDIA_TUNER_XC5000=Y
 CONFIG_CRYPTO_AUTHENC=Y
-CONFIG_DECOMPRESS_LZMA=Y
 CONFIG_INPUT_MOUSEDEV=Y
 CONFIG_CRYPTO_DES=Y
 CONFIG_REGULATOR_PMIC8058=Y
@@ -138,6 +137,7 @@ CONFIG_NLS_ASCII=Y
 CONFIG_KEYBOARD_PMIC8058=Y
 CONFIG_FB_MSM=Y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=Y
+CONFIG_BLK_CGROUP=Y
 CONFIG_CRYPTO_RNG=M
 CONFIG_USB_STORAGE_CYPRESS_ATACB=Y
 CONFIG_CRYPTO_DEV_QCE=M
@@ -281,7 +281,6 @@ CONFIG_DIAG_CHAR=Y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=Y
 CONFIG_IP_NF_ARPFILTER=Y
 CONFIG_BT_HID=M
-CONFIG_DECOMPRESS_BZIP2=Y
 CONFIG_NF_NAT_H323=Y
 CONFIG_MEDIA_TUNER_MC44S803=Y
 CONFIG_TIMPANI_CODEC=Y
