--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.3
-# Fri Nov 18 14:17:23 2011
+# Fri Nov 18 18:09:36 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -56,19 +56,18 @@ CONFIG_SYSVIPC_SYSCTL=y
 #
 # RCU Subsystem
 #
-CONFIG_TREE_RCU=y
-# CONFIG_TREE_PREEMPT_RCU is not set
+# CONFIG_TREE_RCU is not set
+CONFIG_TREE_PREEMPT_RCU=y
 # CONFIG_TINY_RCU is not set
 # CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
-# CONFIG_RCU_FAST_NO_HZ is not set
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 # CONFIG_CGROUP_NS is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
@@ -107,7 +106,7 @@ CONFIG_SYSCTL_SYSCALL=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
-CONFIG_ELF_CORE=y
+# CONFIG_ELF_CORE is not set
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
 CONFIG_EPOLL=y
@@ -400,7 +399,7 @@ CONFIG_MSM_DALRPC_TEST=m
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1566000
-CONFIG_MSM_CPU_FREQ_MIN=54000
+CONFIG_MSM_CPU_FREQ_MIN=27000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -456,7 +455,7 @@ CONFIG_MSM_SHOW_RESUME_IRQ=y
 # CONFIG_BT_MSM_PINTEST is not set
 # CONFIG_MSM_FAKE_BATTERY is not set
 CONFIG_MSM_QDSP6_APR=y
-# CONFIG_MSM_AUDIO_QDSP6 is not set
+CONFIG_MSM_AUDIO_QDSP6=y
 CONFIG_VP_A2220=y
 CONFIG_MSM_SCHED_FAST_CPU_ONLINE=y
 CONFIG_PMIC8058_XOADC_CAL=y
@@ -586,12 +585,28 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
-# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_SMARTASS2_DEFAULT_AWAKE_IDEAL_FREQ=918000
+CONFIG_SMARTASS2_DEFAULT_SLEEP_IDEAL_FREQ=356000
+CONFIG_SMARTASS2_DEFAULT_RAMP_UP_STEP=54000
+CONFIG_SMARTASS2_DEFAULT_RAMP_DOWN_STEP=54000
+CONFIG_SMARTASS2_DEFAULT_MAX_CPU_LOAD=75
+CONFIG_SMARTASS2_DEFAULT_MIN_CPU_LOAD=50
+CONFIG_SMARTASS2_DEFAULT_UP_RATE_US=10
+CONFIG_SMARTASS2_DEFAULT_DOWN_RATE_US=20
+CONFIG_SMARTASS2_DEFAULT_SLEEP_WAKEUP_FREQ=99999999
+CONFIG_SMARTASS2_DEFAULT_SAMPLE_RATE_JIFFIES=2
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -614,7 +629,6 @@ CONFIG_NEON=y
 # Userspace binary formats
 #
 CONFIG_BINFMT_ELF=y
-# CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_HAVE_AOUT=y
 # CONFIG_BINFMT_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
@@ -1522,7 +1536,7 @@ CONFIG_SPI_SPIDEV=m
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
-CONFIG_DEBUG_GPIO=y
+# CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
 
 #
@@ -2843,13 +2857,13 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_WORKQUEUE_TRACER is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
 CONFIG_ARM_UNWIND=y
-CONFIG_DEBUG_USER=y
+# CONFIG_DEBUG_USER is not set
 CONFIG_DEBUG_ERRORS=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_LL is not set
