--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.35.11-dag0.3
-# Fri Nov 18 14:17:23 2011
+# Linux kernel version: 2.6.35.11-dag0.4pre
+# Sat Nov 19 12:41:22 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -44,6 +44,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
+CONFIG_SMARTASS2_DEFAULT_SLEEP_IDEAL_FREQ=356000
 CONFIG_PMIC8058_UPL=y
 CONFIG_ARM_UNWIND=y
 CONFIG_MSM_BT_POWER=y
@@ -60,7 +61,6 @@ CONFIG_NF_CONNTRACK_SIP=y
 CONFIG_USB_SUSPEND=y
 CONFIG_ARCH_MSM8X60=y
 CONFIG_HAVE_KERNEL_LZMA=y
-CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_FIB_RULES=y
 CONFIG_USA_MODEL_SGH_I727_REV02=y
@@ -92,6 +92,7 @@ CONFIG_TUN=y
 CONFIG_USB_OTG_UTILS=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 CONFIG_ARCH_INLINE_SPIN_LOCK_IRQ=y
+CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_DM_CRYPT=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_HAVE_PROC_CPU=y
@@ -102,6 +103,7 @@ CONFIG_USB=y
 CONFIG_SWITCH_GPIO=y
 CONFIG_CRYPTO_HMAC=y
 CONFIG_USB_DUN_SUPPORT=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MSM_GSBI9_UART=y
@@ -188,6 +190,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
 CONFIG_SND_USB_AUDIO=y
+CONFIG_SMARTASS2_DEFAULT_SLEEP_WAKEUP_FREQ=99999999
 CONFIG_ASHMEM=y
 CONFIG_MACH_MSM8X60_FLUID=y
 CONFIG_BLOCK=y
@@ -239,6 +242,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
+CONFIG_MSM_AUDIO_QDSP6=y
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_NLS_ISO8859_1=y
@@ -247,6 +251,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_TEXTSEARCH_BM=y
+CONFIG_SMARTASS2_DEFAULT_RAMP_DOWN_STEP=54000
 CONFIG_PMIC8058_PWM=y
 CONFIG_PPP_MPPE=y
 CONFIG_RFKILL=y
@@ -272,9 +277,9 @@ CONFIG_NF_NAT_PROTO_DCCP=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 CONFIG_INLINE_READ_LOCK_IRQSAVE=y
 CONFIG_ARCH_INLINE_WRITE_TRYLOCK=y
-CONFIG_DEBUG_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
+CONFIG_SMARTASS2_DEFAULT_AWAKE_IDEAL_FREQ=918000
 CONFIG_SCSI_WAIT_SCAN=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_NF_DEFRAG_IPV4=y
@@ -340,13 +345,12 @@ CONFIG_SND_USB=y
 CONFIG_RD_GZIP=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_ARCH_INLINE_READ_LOCK=y
-CONFIG_TREE_RCU=y
 CONFIG_LBDAF=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CRYPTO_DEV_QCE=m
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_CRYPTO_MD5=y
-CONFIG_DEBUG_USER=y
 CONFIG_PM_OPS=y
 CONFIG_MEDIA_TUNER_TEA5767=y
 CONFIG_OABI_COMPAT=y
@@ -383,6 +387,7 @@ CONFIG_USB_MSM_72K=y
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_INLINE_SPIN_LOCK_IRQSAVE=y
 CONFIG_SLIP_MODE_SLIP6=y
+CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
 CONFIG_MMC_MSM_SDC5_DUMMY52_REQUIRED=y
 CONFIG_EARLYSUSPEND=y
 CONFIG_RMNET_SDIO_SMD_DATA_CHANNEL="DATA40"
@@ -450,6 +455,7 @@ CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_EXTRA_FIRMWARE=""
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_VFAT_FS=y
 CONFIG_ARCH_INLINE_WRITE_UNLOCK_BH=y
@@ -471,6 +477,7 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 CONFIG_MSM_PIL=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_CPU_FREQ_MSM=y
+CONFIG_SMARTASS2_DEFAULT_MAX_CPU_LOAD=75
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 CONFIG_FS_MBCACHE=y
 CONFIG_RTC_CLASS=y
@@ -601,7 +608,7 @@ CONFIG_BT_BNEP=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_PN544=y
-CONFIG_MSM_CPU_FREQ_MIN=54000
+CONFIG_MSM_CPU_FREQ_MIN=27000
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 CONFIG_SND_DRIVERS=y
@@ -626,6 +633,7 @@ CONFIG_MSM_AMSS_VERSION_6225=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_NEED_DMA_MAP_STATE=y
+CONFIG_LAGFREE_MIN_LOAD=15
 CONFIG_SERIO_LIBPS2=y
 CONFIG_INLINE_WRITE_LOCK=y
 CONFIG_ANDROID_PARANOID_NETWORK=y
@@ -645,6 +653,7 @@ CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
 CONFIG_USB_STORAGE_SDDR55=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
 CONFIG_SMP=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_INLINE_SPIN_LOCK=y
@@ -688,6 +697,7 @@ CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_ALIGNMENT_TRAP=y
 CONFIG_ARCH_INLINE_READ_LOCK_BH=y
 CONFIG_SCSI_MOD=y
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_KSAPI=m
 CONFIG_DAG=y
 CONFIG_OPROFILE=m
@@ -783,7 +793,9 @@ CONFIG_I2C_HELPER_AUTO=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_INLINE_SPIN_UNLOCK_IRQ=y
 CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
+CONFIG_SMARTASS2_DEFAULT_DOWN_RATE_US=20
 CONFIG_INLINE_READ_LOCK=y
+CONFIG_SMARTASS2_DEFAULT_RAMP_UP_STEP=54000
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_IPV6_MIP6=y
@@ -809,6 +821,8 @@ CONFIG_RTC_PM8058=y
 CONFIG_MMC_MSM_SDC4_SUPPORT=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_FB=y
+CONFIG_SMARTASS2_DEFAULT_UP_RATE_US=10
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
 CONFIG_I2C_COMPAT=y
 CONFIG_CPU_32v7=y
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
@@ -846,7 +860,6 @@ CONFIG_CPU_32v6K=y
 CONFIG_DEFAULT_SECURITY=""
 CONFIG_TICK_ONESHOT=y
 CONFIG_NF_NAT_PROTO_UDPLITE=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_RMNET_SMD_CTL_CHANNEL="DATA40_CNTL"
 CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_WIRELESS_EXT=y
@@ -868,6 +881,7 @@ CONFIG_PROC_FS=y
 CONFIG_RC_MAP=y
 CONFIG_WEXT_PRIV=y
 CONFIG_SCSI_LOWLEVEL=y
+CONFIG_LAGFREE_MAX_LOAD=50
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_SND=y
 CONFIG_FLATMEM=y
@@ -902,6 +916,7 @@ CONFIG_PMIC8058_OTHC=y
 CONFIG_MSM_DALRPC=y
 CONFIG_INLINE_SPIN_LOCK_IRQ=y
 CONFIG_USB_ANDROID_DIAG=y
+CONFIG_SMARTASS2_DEFAULT_MIN_CPU_LOAD=50
 CONFIG_SND_TIMER=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_BLK_DEV=y
@@ -923,10 +938,10 @@ CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_NF_NAT_FTP=y
 CONFIG_NF_CT_PROTO_UDPLITE=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_ELF_CORE=y
 CONFIG_TEXTSEARCH=y
 CONFIG_INOTIFY=y
 CONFIG_USB_SUPPORT=y
+CONFIG_SMARTASS2_DEFAULT_SAMPLE_RATE_JIFFIES=2
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
 CONFIG_STAGING=y
 CONFIG_FLAT_NODE_MEM_MAP=y
