--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -39,6 +39,7 @@ CONFIG_VIDEO_IR_I2C=Y
 CONFIG_USB=Y
 CONFIG_SWITCH_GPIO=Y
 CONFIG_CRYPTO_HMAC=Y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=Y
 CONFIG_IP_NF_ARPTABLES=Y
 CONFIG_BATTERY_MAX17040=Y
 CONFIG_SND_SOC=Y
@@ -180,6 +181,7 @@ CONFIG_KEYBOARD_ATKBD=Y
 CONFIG_NF_NAT=Y
 CONFIG_CHR_DEV_SCH=Y
 CONFIG_CRYPTO_HASH=Y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=Y
 CONFIG_VFAT_FS=Y
 CONFIG_TSIF_CHRDEV=M
 CONFIG_SND_HWDEP=Y
@@ -260,6 +262,7 @@ CONFIG_MSM_RMNET=Y
 CONFIG_CRYPTO=Y
 CONFIG_IP_NF_IPTABLES=Y
 CONFIG_SCSI_MOD=Y
+CONFIG_CPU_FREQ_GOV_LAGFREE=Y
 CONFIG_KSAPI=M
 CONFIG_OPROFILE=M
 CONFIG_CRYPTO_CRC32C=Y
