fix cpu init code not to override cpu1 at hotplug

--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.35.11-dag0.4pre
-# Sat Nov 19 12:41:22 2011
+# Linux kernel version: 2.6.35.11-dag0.4
+# Fri Nov 25 19:46:10 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -44,7 +44,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_INLINE_WRITE_UNLOCK_IRQ=y
-CONFIG_SMARTASS2_DEFAULT_SLEEP_IDEAL_FREQ=356000
+CONFIG_SMARTASS2_DEFAULT_SLEEP_IDEAL_FREQ=270000
 CONFIG_PMIC8058_UPL=y
 CONFIG_ARM_UNWIND=y
 CONFIG_MSM_BT_POWER=y
@@ -63,6 +63,7 @@ CONFIG_ARCH_MSM8X60=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_FIB_RULES=y
+CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_USA_MODEL_SGH_I727_REV02=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_IP6_NF_MANGLE=y
@@ -82,7 +83,6 @@ CONFIG_WLAN=y
 CONFIG_NAMESPACES=y
 CONFIG_INLINE_SPIN_UNLOCK_BH=y
 CONFIG_BLK_DEV_BSG=y
-CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_LEGACY_PTYS=y
 CONFIG_XFRM_IPCOMP=y
@@ -115,7 +115,6 @@ CONFIG_MEDIA_TUNER_XC5000=y
 CONFIG_PRINTK=y
 CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_USB_OTG_WHITELIST=y
 CONFIG_TIMERFD=y
 CONFIG_INLINE_READ_TRYLOCK=y
 CONFIG_CRYPTO_AUTHENC=y
@@ -150,7 +149,6 @@ CONFIG_BLK_DEV_INITRD=y
 CONFIG_I2C_QUP=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
 CONFIG_NF_CONNTRACK_SANE=y
-CONFIG_USB_OTG=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_HWMON=y
@@ -279,7 +277,7 @@ CONFIG_INLINE_READ_LOCK_IRQSAVE=y
 CONFIG_ARCH_INLINE_WRITE_TRYLOCK=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
-CONFIG_SMARTASS2_DEFAULT_AWAKE_IDEAL_FREQ=918000
+CONFIG_SMARTASS2_DEFAULT_AWAKE_IDEAL_FREQ=1134000
 CONFIG_SCSI_WAIT_SCAN=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_NF_DEFRAG_IPV4=y
@@ -532,6 +530,7 @@ CONFIG_IPV6_PRIVACY=y
 CONFIG_LOCKD_V4=y
 CONFIG_DUMMY=y
 CONFIG_USB_GADGET_DUALSPEED=y
+CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_HAS_IOMEM=y
 CONFIG_RING_BUFFER_ALLOW_SWAP=y
 CONFIG_SND_RAWMIDI=y
@@ -539,7 +538,6 @@ CONFIG_PPPOPNS=y
 CONFIG_CHARGER_SMB328A=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_GENERIC_IRQ_PROBE=y
-CONFIG_MSM_STANDALONE_POWER_COLLAPSE=y
 CONFIG_USB_STORAGE_SDDR09=y
 CONFIG_ARCH_INLINE_READ_UNLOCK_IRQ=y
 CONFIG_IP_NF_MATCH_TTL=y
@@ -608,7 +606,7 @@ CONFIG_BT_BNEP=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_PN544=y
-CONFIG_MSM_CPU_FREQ_MIN=27000
+CONFIG_MSM_CPU_FREQ_MIN=270000
 CONFIG_NF_NAT_NEEDED=y
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 CONFIG_SND_DRIVERS=y
@@ -653,14 +651,13 @@ CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
 CONFIG_USB_STORAGE_SDDR55=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
-CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=270000
 CONFIG_SMP=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_INLINE_SPIN_LOCK=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_I2C_SSBI=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
-CONFIG_USB_SEC_WHITELIST=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_MSM_WATCHDOG=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -699,7 +696,6 @@ CONFIG_ARCH_INLINE_READ_LOCK_BH=y
 CONFIG_SCSI_MOD=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_KSAPI=m
-CONFIG_DAG=y
 CONFIG_OPROFILE=m
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_SERIAL_CORE=y
@@ -754,7 +750,7 @@ CONFIG_PROFILING=y
 CONFIG_INET6_XFRM_MODE_TRANSPORT=y
 CONFIG_USB_ANDROID_RMNET=y
 CONFIG_CRYPTO_ARC4=y
-CONFIG_MSM7X00A_SLEEP_MODE=0
+CONFIG_MSM7X00A_SLEEP_MODE=1
 CONFIG_SLHC=y
 CONFIG_SCSI_TGT=y
 CONFIG_CRYPTO_MANAGER=y
@@ -822,7 +818,7 @@ CONFIG_MMC_MSM_SDC4_SUPPORT=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
 CONFIG_FB=y
 CONFIG_SMARTASS2_DEFAULT_UP_RATE_US=10
-CONFIG_LAGFREE_FREQ_SLEEP_MAX=384000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=270000
 CONFIG_I2C_COMPAT=y
 CONFIG_CPU_32v7=y
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
