--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Fri Nov 25 19:46:10 2011
+# Fri Nov 25 22:12:54 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -696,6 +696,7 @@ CONFIG_ARCH_INLINE_READ_LOCK_BH=y
 CONFIG_SCSI_MOD=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_KSAPI=m
+CONFIG_DAG=y
 CONFIG_OPROFILE=m
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_SERIAL_CORE=y
