--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Tue Nov 29 21:33:31 2011
+# Wed Nov 30 00:24:50 2011
 #
 CONFIG_RING_BUFFER=y
 CONFIG_NF_CONNTRACK_H323=y
@@ -702,6 +702,7 @@ CONFIG_ARCH_INLINE_READ_LOCK_BH=y
 CONFIG_SCSI_MOD=y
 CONFIG_CPU_FREQ_GOV_LAGFREE=y
 CONFIG_KSAPI=m
+CONFIG_DAG=y
 CONFIG_OPROFILE=m
 CONFIG_CRYPTO_CRC32C=y
 CONFIG_SERIAL_CORE=y
