--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Tue Nov 29 21:33:21 2011
+# Wed Nov 30 00:24:27 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -241,7 +241,7 @@ CONFIG_FREEZER=y
 #
 # System Type
 #
-# CONFIG_DAG is not set
+CONFIG_DAG=y
 CONFIG_MMU=y
 # CONFIG_ARCH_AAEC2000 is not set
 # CONFIG_ARCH_INTEGRATOR is not set
