--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Wed Nov 30 13:14:08 2011
+# Wed Nov 30 15:29:19 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -241,7 +241,7 @@ CONFIG_FREEZER=y
 #
 # System Type
 #
-CONFIG_DAG=y
+# CONFIG_DAG is not set
 CONFIG_MMU=y
 # CONFIG_ARCH_AAEC2000 is not set
 # CONFIG_ARCH_INTEGRATOR is not set
