remove samsung ondemand scaling limiter

--- a/.config
+++ b/.config
@@ -130,13 +130,12 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-CONFIG_PROFILING=y
-CONFIG_OPROFILE=m
+# CONFIG_PROFILING is not set
 CONFIG_HAVE_OPROFILE=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -151,7 +150,6 @@ CONFIG_HAVE_CLK=y
 CONFIG_SLOW_WORK=y
 # CONFIG_SLOW_WORK_DEBUG is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -371,7 +369,7 @@ CONFIG_MSM_SMD_PKG4=y
 # CONFIG_MSM_IPC_ROUTER_SMD_XPRT is not set
 CONFIG_MSM_RPC_SDIO_XPRT=y
 CONFIG_MSM_RPC_SDIO_DEBUG=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_SDIO_AL=y
 CONFIG_MSM_SDIO_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
@@ -399,7 +397,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
-CONFIG_MSM_DALRPC_TEST=m
+# CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1566000
@@ -411,7 +409,7 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_RTAC is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
-CONFIG_MSM_DMA_TEST=m
+# CONFIG_MSM_DMA_TEST is not set
 CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_WIFI_MEM_PREALLOC is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
@@ -492,7 +490,7 @@ CONFIG_HAS_TLS_REG=y
 CONFIG_ARM_L1_CACHE_SHIFT=5
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 # CONFIG_VCM is not set
-CONFIG_STRICT_MEMORY_RWX=y
+# CONFIG_STRICT_MEMORY_RWX is not set
 # CONFIG_DONT_RESERVE_FROM_MOVABLE_ZONE is not set
 # CONFIG_RESERVE_FIRST_PAGE is not set
 CONFIG_CPU_HAS_PMU=y
@@ -500,7 +498,7 @@ CONFIG_CPU_HAS_PMU=y
 # CONFIG_ARM_ERRATA_458693 is not set
 # CONFIG_ARM_ERRATA_460075 is not set
 # CONFIG_ARM_ERRATA_720789 is not set
-CONFIG_KSAPI=m
+# CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 CONFIG_COMMON_CLKDEV=y
 # CONFIG_FIQ_DEBUGGER is not set
