--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Sun Dec  4 03:24:50 2011
+# Sun Dec  4 15:54:09 2011
 #
 CONFIG_NF_CONNTRACK_H323=y
 CONFIG_SCSI_DMA=y
@@ -658,6 +658,7 @@ CONFIG_INLINE_SPIN_LOCK=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_I2C_SSBI=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
+CONFIG_CPU_L2_TABLE=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_MSM_WATCHDOG=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
