--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Sun Dec  4 03:24:50 2011
+# Sun Dec  4 15:54:08 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -400,6 +400,7 @@ CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_L2_VOLTAGE_TABLE=y
+CONFIG_CPU_L2_TABLE=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1566000
 CONFIG_MSM_CPU_FREQ_MIN=384000
