add sysfs interface for sys_vdd voltage levels

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Sun Dec  4 15:54:08 2011
+# Sun Dec  4 18:37:23 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -398,6 +398,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
+CONFIG_SYS_VOLTAGE_TABLE=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_L2_VOLTAGE_TABLE=y
 CONFIG_CPU_L2_TABLE=y
