--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.4
-# Sun Dec  4 15:54:09 2011
+# Sun Dec  4 18:37:24 2011
 #
 CONFIG_NF_CONNTRACK_H323=y
 CONFIG_SCSI_DMA=y
@@ -38,6 +38,7 @@ CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_MSM_SDIO_CMUX=y
+CONFIG_SYS_VOLTAGE_TABLE=y
 CONFIG_NET_ETHERNET=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_PPP_SYNC_TTY=y
