--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.11-dag0.43
-# Fri Dec 16 23:16:57 2011
+# Mon Dec 19 01:50:26 2011
 #
 CONFIG_NF_CONNTRACK_H323=y
 CONFIG_SCSI_DMA=y
@@ -16,9 +16,7 @@ CONFIG_I2C_BOARDINFO=y
 CONFIG_NF_NAT_PROTO_SCTP=y
 CONFIG_HAVE_AOUT=y
 CONFIG_VFP=y
-CONFIG_IR_JVC_DECODER=y
 CONFIG_MARIMBA_CORE=y
-CONFIG_EXT3_FS_XATTR=y
 CONFIG_AEABI=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -62,6 +60,7 @@ CONFIG_ARCH_MSM8X60=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_FIB_RULES=y
+CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_USA_MODEL_SGH_I727_REV02=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_IP6_NF_MANGLE=y
@@ -73,13 +72,11 @@ CONFIG_UEVENT_HELPER_PATH=""
 CONFIG_NET_CLS_FLOW=y
 CONFIG_NF_NAT_PROTO_GRE=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_IR_NEC_DECODER=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_WLAN=y
 CONFIG_NAMESPACES=y
 CONFIG_INLINE_SPIN_UNLOCK_BH=y
 CONFIG_BLK_DEV_BSG=y
-CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_LEGACY_PTYS=y
 CONFIG_XFRM_IPCOMP=y
@@ -94,8 +91,8 @@ CONFIG_DM_CRYPT=y
 CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_HAVE_PROC_CPU=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
-CONFIG_VIDEO_IR_I2C=y
 CONFIG_MSM_XO=y
+CONFIG_NFSD=m
 CONFIG_USB=y
 CONFIG_SWITCH_GPIO=y
 CONFIG_CRYPTO_HMAC=y
@@ -121,7 +118,6 @@ CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_SHMEM=y
 CONFIG_MACH_MSM8X60_QT=y
 CONFIG_RMNET_SMD_DATA_CHANNEL="DATA40"
-CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_DNOTIFY=y
 CONFIG_ASK_IP_FIB_HASH=y
 CONFIG_CRYPTO_DES=y
@@ -131,6 +127,7 @@ CONFIG_MSM_SCHED_FAST_CPU_ONLINE=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_MSM_SMD=y
 CONFIG_NET_CLS_U32=y
+CONFIG_EXPORTFS=m
 CONFIG_ARM_GIC=y
 CONFIG_SERIO=y
 CONFIG_MSM7X00A_USE_GP_TIMER=y
@@ -181,6 +178,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
 CONFIG_SND_USB_AUDIO=y
+CONFIG_USB_ANDROID_ACCESSORY=y
 CONFIG_L2_VOLTAGE_TABLE=y
 CONFIG_SMARTASS2_DEFAULT_SLEEP_WAKEUP_FREQ=99999999
 CONFIG_ASHMEM=y
@@ -223,6 +221,7 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SPI_SPIDEV=m
 CONFIG_I2C_GPIO=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
+CONFIG_PPPOE=y
 CONFIG_NETFILTER_XT_MATCH_OWNER=y
 CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -233,7 +232,6 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
-CONFIG_MSM_AUDIO_QDSP6=y
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_NLS_ISO8859_1=y
@@ -259,7 +257,6 @@ CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
-CONFIG_VIDEO_IR=y
 CONFIG_MACH_MSM8X60_QRDC=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_PROC_PAGE_MONITOR=y
@@ -298,7 +295,6 @@ CONFIG_MACH_MSM8X60_FFA=y
 CONFIG_INET6_XFRM_MODE_TUNNEL=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_IP_NF_FILTER=y
-CONFIG_EXT3_FS=y
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
 CONFIG_FAT_FS=y
 CONFIG_TEXTSEARCH_FSM=y
@@ -341,6 +337,7 @@ CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CRYPTO_DEV_QCE=m
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_CRYPTO_MD5=y
+CONFIG_NFSD_V3=y
 CONFIG_PM_OPS=y
 CONFIG_MEDIA_TUNER_TEA5767=y
 CONFIG_OABI_COMPAT=y
@@ -486,13 +483,11 @@ CONFIG_BT_HIDP=y
 CONFIG_PMIC8058_NFC=y
 CONFIG_CPU_ABRT_EV7=y
 CONFIG_ARCH_INLINE_SPIN_LOCK=y
-CONFIG_IR_CORE=y
 CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_RELAY=y
 CONFIG_CRYPTO_ECB=y
 CONFIG_NF_CONNTRACK_AMANDA=y
 CONFIG_DEBUG_FS=y
-CONFIG_ARM_THUMBEE=y
 CONFIG_BASE_FULL=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_ZLIB_DEFLATE=y
@@ -532,12 +527,10 @@ CONFIG_PM_RUNTIME=y
 CONFIG_FB_MSM_OVERLAY_WRITEBACK=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_IR_SONY_DECODER=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NET=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_SND_JACK=y
-CONFIG_EXT2_FS=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_VFPv3=y
@@ -574,6 +567,7 @@ CONFIG_CRYPTO_AES=y
 CONFIG_INLINE_WRITE_LOCK_IRQSAVE=y
 CONFIG_GPIOLIB=y
 CONFIG_MSM_RPC_OEM_RAPI=y
+CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_BT_HCIUART_H4=y
 CONFIG_SND_ARM=y
 CONFIG_DEBUG_ERRORS=y
@@ -724,7 +718,7 @@ CONFIG_MSM_8x60_VOIP=y
 CONFIG_INET6_XFRM_MODE_TRANSPORT=y
 CONFIG_USB_ANDROID_RMNET=y
 CONFIG_CRYPTO_ARC4=y
-CONFIG_MSM7X00A_SLEEP_MODE=0
+CONFIG_MSM7X00A_SLEEP_MODE=1
 CONFIG_SLHC=y
 CONFIG_SCSI_TGT=y
 CONFIG_CRYPTO_MANAGER=y
@@ -767,7 +761,7 @@ CONFIG_FB_MSM_LCDC_LD9040_WVGA_PANEL=y
 CONFIG_SMARTASS2_DEFAULT_DOWN_RATE_US=20
 CONFIG_INLINE_READ_LOCK=y
 CONFIG_SMARTASS2_DEFAULT_RAMP_UP_STEP=54000
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_IPV6_MIP6=y
 CONFIG_NLATTR=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -824,7 +818,6 @@ CONFIG_FB_MSM_LCDC_LD9040_WVGA=y
 CONFIG_VIDEO_MEDIA=y
 CONFIG_MPP_PMIC8901=y
 CONFIG_WAKELOCK_STAT=y
-CONFIG_USB_ANDROID_SAMSUNG_ESCAPE=y
 CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_CPU_32v6K=y
 CONFIG_DEFAULT_SECURITY=""
@@ -840,7 +833,6 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_HW_RANDOM=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_KEYPAD_CYPRESS_TOUCH=y
-CONFIG_DEFAULT_NOOP=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_BASE_SMALL=0
@@ -848,14 +840,11 @@ CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_MSM_V2_TLMM=y
 CONFIG_PMIC8058_XOADC_CAL=y
 CONFIG_PROC_FS=y
-CONFIG_RC_MAP=y
 CONFIG_WEXT_PRIV=y
 CONFIG_SCSI_LOWLEVEL=y
 CONFIG_LAGFREE_MAX_LOAD=50
-CONFIG_EXT2_FS_XATTR=y
 CONFIG_SND=y
 CONFIG_FLATMEM=y
-CONFIG_IR_RC6_DECODER=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
 CONFIG_MSM_AMSS_VERSION=6225
@@ -897,7 +886,6 @@ CONFIG_HAVE_SCHED_CLOCK=y
 CONFIG_CRYPTO_ANSI_CPRNG=m
 CONFIG_NET_SCHED=y
 CONFIG_MSM_STACKED_MEMORY=y
-CONFIG_JBD=y
 CONFIG_RMNET_SMD_SDIO_DATA_CHANNEL=8
 CONFIG_PRINTK_TIME=y
 CONFIG_PPP=y
@@ -920,7 +908,6 @@ CONFIG_LEDS_GPIO=y
 CONFIG_MSM_RPC_SDIO_DEBUG=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_IR_RC5_DECODER=y
 CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE=y
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_INET6_XFRM_MODE_BEET=y
@@ -991,6 +978,7 @@ CONFIG_RTC_INTF_DEV=y
 CONFIG_HID_SUPPORT=y
 CONFIG_FB_MSM_HDMI_3D=y
 CONFIG_USB_ANDROID_RMNET_SDIO=y
+CONFIG_DEFAULT_DEADLINE=y
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_NET_ACTIVITY_STATS=y
 CONFIG_MSM_RPC_SDIO_XPRT=y
