--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -6,7 +6,6 @@ CONFIG_MSM_VIDC_VENC=Y
 CONFIG_IP_NF_TARGET_REDIRECT=Y
 CONFIG_CRC32=Y
 CONFIG_NF_NAT_PROTO_SCTP=Y
-CONFIG_IR_JVC_DECODER=Y
 CONFIG_MARIMBA_CORE=Y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=Y
 CONFIG_BLK_DEV_DM=Y
@@ -28,13 +27,12 @@ CONFIG_IPV6=Y
 CONFIG_CRYPTO_AEAD=Y
 CONFIG_NET_CLS_FLOW=Y
 CONFIG_NF_NAT_PROTO_GRE=Y
-CONFIG_IR_NEC_DECODER=Y
 CONFIG_XFRM_IPCOMP=Y
 CONFIG_CRYPTO_RNG2=Y
 CONFIG_NETFILTER_NETLINK_QUEUE=Y
 CONFIG_TUN=Y
 CONFIG_DM_CRYPT=Y
-CONFIG_VIDEO_IR_I2C=Y
+CONFIG_NFSD=M
 CONFIG_USB=Y
 CONFIG_SWITCH_GPIO=Y
 CONFIG_CRYPTO_HMAC=Y
@@ -48,6 +46,7 @@ CONFIG_CRYPTO_DES=Y
 CONFIG_REGULATOR_PMIC8058=Y
 CONFIG_NLS_CODEPAGE_437=Y
 CONFIG_NET_CLS_U32=Y
+CONFIG_EXPORTFS=M
 CONFIG_SERIO=Y
 CONFIG_SUNRPC_GSS=Y
 CONFIG_NET_EMATCH_U32=Y
@@ -87,6 +86,7 @@ CONFIG_NLS=Y
 CONFIG_SPI_SPIDEV=M
 CONFIG_I2C_GPIO=Y
 CONFIG_CRYPTO_DEV_QCRYPTO=M
+CONFIG_PPPOE=Y
 CONFIG_NETFILTER_XT_MATCH_OWNER=Y
 CONFIG_SPI_BITBANG=Y
 CONFIG_IP6_NF_IPTABLES=Y
@@ -103,7 +103,6 @@ CONFIG_RFKILL=Y
 CONFIG_NET_KEY=Y
 CONFIG_IOSCHED_DEADLINE=Y
 CONFIG_IPV6_SIT=Y
-CONFIG_VIDEO_IR=Y
 CONFIG_IP_NF_TARGET_MASQUERADE=Y
 CONFIG_NF_NAT_PROTO_DCCP=Y
 CONFIG_SCSI_WAIT_SCAN=M
@@ -118,7 +117,6 @@ CONFIG_IP_NF_MANGLE=Y
 CONFIG_INET6_XFRM_MODE_TUNNEL=Y
 CONFIG_MEDIA_SUPPORT=Y
 CONFIG_IP_NF_FILTER=Y
-CONFIG_EXT3_FS=Y
 CONFIG_NETFILTER_XT_MATCH_LENGTH=Y
 CONFIG_FAT_FS=Y
 CONFIG_TEXTSEARCH_FSM=Y
@@ -186,7 +184,6 @@ CONFIG_SLIP=Y
 CONFIG_I2C=Y
 CONFIG_BT_HIDP=Y
 CONFIG_PMIC8058_NFC=Y
-CONFIG_IR_CORE=Y
 CONFIG_CRYPTO_ECB=Y
 CONFIG_NF_CONNTRACK_AMANDA=Y
 CONFIG_FB_CFB_IMAGEBLIT=Y
@@ -204,10 +201,8 @@ CONFIG_SND_RAWMIDI=Y
 CONFIG_PPPOPNS=Y
 CONFIG_IP_NF_MATCH_TTL=Y
 CONFIG_SND_PCM=Y
-CONFIG_IR_SONY_DECODER=Y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=Y
 CONFIG_INPUT_EVDEV=Y
-CONFIG_EXT2_FS=Y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=Y
 CONFIG_PACKET=Y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=Y
@@ -310,9 +305,7 @@ CONFIG_ANDROID_LOGGER=Y
 CONFIG_HW_RANDOM=Y
 CONFIG_KEYPAD_CYPRESS_TOUCH=Y
 CONFIG_CRYPTO_BLKCIPHER2=Y
-CONFIG_RC_MAP=Y
 CONFIG_SND=Y
-CONFIG_IR_RC6_DECODER=Y
 CONFIG_IKCONFIG=Y
 CONFIG_PMIC8901=Y
 CONFIG_HW_RANDOM_MSM=Y
@@ -324,7 +317,6 @@ CONFIG_SND_TIMER=Y
 CONFIG_NFS_ACL_SUPPORT=Y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=Y
 CONFIG_CRYPTO_ANSI_CPRNG=M
-CONFIG_JBD=Y
 CONFIG_PPP=Y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=Y
 CONFIG_NF_NAT_FTP=Y
@@ -332,7 +324,6 @@ CONFIG_NF_CT_PROTO_UDPLITE=Y
 CONFIG_LEDS_GPIO=Y
 CONFIG_BLK_DEV_RAM=Y
 CONFIG_NETFILTER_XT_MATCH_STATE=Y
-CONFIG_IR_RC5_DECODER=Y
 CONFIG_INET6_XFRM_MODE_BEET=Y
 CONFIG_FB_CFB_COPYAREA=Y
 CONFIG_TZCOM=Y
